[package]
name = "make-adventure"
authors = ["qzvck <reisuo@protonmail.com>"]
description = "A tool for generating adventures in HTML form."
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5.9"

[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.clap]
version = "3.2.6"
features = ["derive"]
